# gravity-notes

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js
.github/workflows/: release.yml
docs/plans/: 2026-01-07-gravity-design.md  2026-01-07-gravity-implementation.md  2026-01-08-card-view-redesign.md  2026-01-08-main-ui-redesign.md
src/: App.svelte  app.css  types.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: clipper.rs  commands.rs  export.rs  lib.rs  main.rs  storage.rs
src/lib/: api.ts  types.ts
src/lib/components/: CardView.svelte  DeleteToast.svelte  Editor.svelte  ExportModal.svelte  HelpModal.svelte  NoteList.svelte  SearchBar.svelte  StatusBar.svelte  TitleBar.svelte  Toast.svelte
src/lib/stores/: settings.ts
src/lib/windows/: CaptureWindow.svelte  MainWindow.svelte  NoteWindow.svelte
